fix :: remove scrollbar

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -7836,8 +7836,7 @@ tbody {
   display: flex;
   align-items: flex-end;
   flex-direction: column;
-  height: 50vh;
-
+  height: 46vh;
   margin-left: 64px;
   box-shadow: 0px 24px 48px -12px rgba(16, 24, 40, 0.18);
   border-radius: 6px;
